test/testdata/classes/methods/class/too_many_args_error.lox
class Foo {
  class add(x, y) {
    print x + y;
  }
}

Foo.add(1, 2, 3); // error: Foo.add() accepts 2 arguments but 3 were given
